Initial draft of login screen

--- a/SCALE/Websites/loginpage.html
+++ b/SCALE/Websites/loginpage.html
@@ -8,8 +8,9 @@
 
 <body class = "loginBackground">
 	
-	<div class="centerDivSection">
-		<h1 class="companyText">
+	<div class="centerDivSection moveToCenterWithDelay"></div>
+	<div class="centerDivSectionAnimatedFromBottom moveToCenterWithDelay">
+		<h1 class="companyText fadeInWithDelay">
 			<strong>
 				<font size = "4"> 
 					<font color="#502706">by</font> 
@@ -17,16 +18,18 @@
 				</font>
 			</strong>
 		</h1>
-		<form class="loginForm">	  
+		<form class="loginForm fadeInWithDelay">	  
 		  	<input class="transparentTextInput" type="text" name="firstname" placeholder="Email"> <br>  
 		  	<input class="transparentTextInput" type="password" name="lastname" placeholder="Password"> <br>
 			<button class="btn btnWithPadding ForgotPassword">Forgot Password</button>
 			<button class="btn Login"><a href="homepage.html" style="text-decoration: none; color:#502706;" >Login</a></button>
 		</form>
-		<p class="notAMemberText">Not a user?</p>
-		<button class="btn btnWithPadding Register">Register</button>
-		<p class="errorText">Error</p>
+		<p class="notAMemberText fadeInWithDelay">Not a user?</p>
+		<button class="btn btnWithPadding Register fadeInWithDelay">Register</button>
+		<p class="errorText fadeInWithDelay">Error</p>
 	</div>
+	
+	
 </form>
 </body>
 </html>
